--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,7 +74,7 @@
 <body>
     <div class="container">
         <h1>Convert PST to IST</h1>
-        <form action="/convert" method="POST">
+        <form action="/convert" method="GET">
             <label for="day">Day of the Week:</label>
             <select id="day" name="day" required>
                 <option value="Sunday">Sunday</option>
