--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,6 +96,10 @@
             transform: translateY(-3px);
         }
     </style>
+        <script>
+            window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+          </script>
+          <script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body>
     <div class="container">
@@ -140,6 +144,7 @@
             </div>
         <% } %>
     </div>
+    
 </body>
 </html>
 
